logs/20250620_142802.log
Hello,DirectX!

WSTRING1280

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Object3D.VS.hlsl:18:8: error: redefinition of 'VertexShaderOutput'
struct VertexShaderOutput
       ^
./object3d.hlsli:1:8: note: previous definition is here
struct VertexShaderOutput
       ^
Object3D.VS.hlsl:31:12: error: no member named 'normal' in 'VertexShaderOutput'
    output.normal = normalize(mul(input.normal, (float32_t3x3) gTransformationMatrix.World));
    ~~~~~~ ^
Object3D.VS.hlsl:31:49: warning: implicit truncation of vector type [-Wconversion]
    output.normal = normalize(mul(input.normal, (float32_t3x3) gTransformationMatrix.World));
                                                ^

